--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "openssl"]
 	path = openssl
 	url = https://github.com/chef-cookbooks/openssl.git
+[submodule "build-essential"]
+	path = build-essential
+	url = https://github.com/chef-cookbooks/build-essential.git
